# SemanticSearch

./: .gitignore  SemanticSearch.sln  compose.yaml
src/Eidolon/: Cargo.toml  build.rs
src/Eidolon/proto/: clip.proto
src/Eidolon/src/: main.rs
src/Eidolon/src/clipembedder/: model.rs  proto.rs  service.rs
src/Glyph/: Cargo.toml  Dockerfile  README.md  build.rs
src/Glyph/proto/: embedding.proto
src/Glyph/src/: lib.rs  main.rs  server.rs  utils.rs
src/Glyph/src/embedder/: mod.rs  model.rs  proto.rs  service.rs
src/Mneme/Mneme.Api/: Dockerfile  Mneme.Api.csproj  Program.cs
src/Mneme/Mneme.Api/Protos/: greet.proto  product.proto
src/Mneme/Mneme.Api/Services/: GreeterService.cs  ProductSearchService.cs
src/R&D/GlyphBackPressureTest/: Dockerfile  GlyphBackPressureTest.csproj  Program.cs
src/R&D/MnemeTester/: Dockerfile  MnemeTester.csproj  MnemeTester.http  Program.cs
src/R&D/MnemeTester/Protos/: product.proto
src/SemanticSearch.ApiService/: SemanticSearch.ApiService.csproj
src/SemanticSearch.ApiService/Properties/: launchSettings.json
src/SemanticSearch.AppHost/: AppHost.cs  SemanticSearch.AppHost.csproj
src/SemanticSearch.AppHost/Properties/: launchSettings.json
src/SemanticSearch.Web/: Program.cs  SemanticSearch.Web.csproj  WeatherApiClient.cs
src/SemanticSearch.Web/Components/: App.razor  _Imports.razor
src/SemanticSearch.Web/Components/Layout/: NavMenu.razor
src/SemanticSearch.Web/Properties/: launchSettings.json
