[package]
name = "Eidolon"
version = "0.1.0"
edition = "2024"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "Eidolon"
path = "src/main.rs"


[dependencies]
tonic = "*"
prost = "0.14"
tonic-prost = "*"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic-health = "0.14.2"

anyhow = "1.0"
candle-core = { version = "0.9.1", features = ["metal"] }
candle-nn = { version = "0.9.1", features = ["metal"] }
candle-transformers = { version = "0.9.1", features = ["metal"] }
hf-hub = "0.4.3"
tokenizers = { version = "0.22.1", features = ["onig"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
csv = "1.3.1"
futures = "0.3.31"
tokio-stream = "0.1.17"
governor = "0.10.1"
image = "0.25.8"

[build-dependencies]
tonic-build = "0.14.2"
tonic-prost-build = "0.14.2"
